remove forbidden method invocations